--- a/community/templates/community/create.html
+++ b/community/templates/community/create.html
@@ -9,5 +9,5 @@
     <input type="submit" type='btn' class='btn btn-outline-light mb-4'>
   </form>
   <hr>
-  <a href="{% url 'community:index' %}" type='btn' class='btn btn-outline-light mb-4'>[back]</a>
+  <a href="{% url 'community:index' %}" type='btn' class='btn btn-outline-light mb-4'>목록으로</a>
 {% endblock %}
