--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -2,68 +2,69 @@
 
 {% block content %}
   <br>
-  <h1 class='fw-bold'>{{ movie.title }}</h1>
-  <img src=" {{url}}" alt="" width="500">
-  <div class='fs-4'>개봉일 : {{ movie.release_date }}</div>
-  <div class='fs-4'>평점 : {{ movie.vote_average }}</div>
-  {% if movie.overview %}
-    <div class='fs-5'>줄거리 : {{ movie.overview }}</div>
-  {% endif %}
-  <div class='fs-5'> 장르 : 
-    {% for genre in movie.genres.all %}
-      {{ genre.name }}
-    {% endfor %}
-  </div>
-  
-  <form class="like-form" data-movie-id="{{ movie.pk }}">
-    {% csrf_token %}
-    {% if user in movie.like_users.all %}
-        <button id="like-button-{{ movie.pk }}" class='btn btn-secondary'>찜 목록에서 삭제</button>
-      {% else %}
-        <button id="like-button-{{ movie.pk }}" class='btn btn-primary'>찜 목록에 추가</button>
-      {% endif %}
-  </form>
+  <div class='container'>
+    <div class='row'>
+      <div class='box col-4'>
+        <img src="{{url}}" alt="" class='w-100'>
+      </div>
 
-  <hr>
-  <h4>평점 목록</h4>
-  {% if comments %}
-    <p><b>{{ comments|length }}개의 평점이 있습니다.</b></p>
-  {% endif %}
-  <ul> 
-    {% for comment in comments %}
-      <li>
-        {% if comment.rank == 1 %}★
-        {% elif comment.rank == 2 %}★★
-        {% elif comment.rank == 3 %}★★★
-        {% elif comment.rank == 4 %}★★★★
-        {% else %}★★★★★
+      <div class='box col-8'>
+        <h1 class='fw-bold'>{{ movie.title }}</h1>
+        <div class='fs-4'><i class="fas fa-calendar-day text-info"></i> 개봉일 : {{ movie.release_date }}</div>
+        <div class='fs-4'><i class="far fa-star text-info fa-sm"></i> 평점 : {{ movie.vote_average }}</div>
+        {% if movie.overview %}
+          <div class='fs-5'><i class="fas fa-film text-info"></i> 줄거리 : {{ movie.overview }}</div>
         {% endif %}
-        {{ comment.content }} - {{ comment.user }}
-        {% if user == comment.user %}
-          <form action="{% url 'movies:comments_delete' movie.pk comment.pk %}" method="POST" class="d-inline">
+        <div class='fs-5'><i class="fas fa-film text-info"></i> 장르 : 
+          {% for genre in movie.genres.all %}
+            {{ genre.name }}
+          {% endfor %}
+        </div>
+
+        <hr>
+        <h4 class='d-inline'>평점 목록</h4>
+        {% if comments|length %}
+          <p class='d-inline'>({{ comments|length }})</p>
+        {% endif %}
+        <ul> 
+          {% for comment in comments %}
+            <li>
+              <div class='text-warning d-inline-block'>
+                {% if comment.rank == 1 %}★
+                {% elif comment.rank == 2 %}★★
+                {% elif comment.rank == 3 %}★★★
+                {% elif comment.rank == 4 %}★★★★
+                {% else %}★★★★★
+                {% endif %}
+              </div>
+              <div class='d-inline-block'>{{ comment.content }} - {{ comment.user }}</div>
+              {% if user == comment.user %}
+                <form action="{% url 'movies:comments_delete' movie.pk comment.pk %}" method="POST" class="d-inline">
+                  {% csrf_token %}
+                  <button class="btn btn-outline-danger btn-sm">
+                    <i class="fas fa-trash-alt fa-sm"></i>
+                  </button>
+                </form>
+              {% endif %}
+            </li>
+          {% empty %}
+            <li>평점이 아직 없어요!</li>
+          {% endfor %}
+        </ul>
+        
+        <hr>
+        {% if request.user.is_authenticated %}
+          <form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
             {% csrf_token %}
-            <input type="submit" value="DELETE">
+            {{ comment_form }}
+            <input type="submit" class='btn btn-outline-light' value='등록'>
           </form>
+        {% else %}
+          <a href="{% url 'accounts:login' %}">[평점을 작성하려면 로그인하세요.]</a>
         {% endif %}
-      </li>
-    {% empty %}
-      <p>평점이 아직 없어요!</p>
-    {% endfor %}
-  </ul>
-
-  <hr>
-  {% if request.user.is_authenticated %}
-    {% comment %} <form class="comment-form" data-movie-id="{{ movie.pk }}"> {% endcomment %}
-    <form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
-      {% csrf_token %}
-      {{ comment_form }}
-      <input type="submit" id="comment-submit-{{ movie.pk }}" value='등록'>
-    </form>
-  {% else %}
-    <a href="{% url 'accounts:login' %}">[평점을 작성하려면 로그인하세요.]</a>
-  {% endif %}
-  
-
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 
@@ -85,11 +86,11 @@
         headers: {'X-CSRFToken': csrftoken},
       })
         .then(response => {
-          // console.log(response.data)
+          console.log(response.data)
           const liked = response.data.liked
           const likeButton = document.querySelector(`#like-button-${movieId}`)
           const count = response.data.count
-          likeButton.classList.toggle('btn-primary')
+          likeButton.classList.toggle('btn-secondary')
           likeButton.classList.toggle('btn-secondary')
 
           if (liked === true) {
