--- a/movies/templates/movies/detail2.html
+++ b/movies/templates/movies/detail2.html
@@ -2,17 +2,24 @@
 
 {% block content %}
   <br>
-   <h1 class='fw-bold'>{{ movie.title }}</h1>
-  <img src=" https://image.tmdb.org/t/p/original/{{movie.poster_path}}" alt="" width="500">
-  <div class='fs-4'>개봉일 : {{ movie.release_date }}</div>
-  <div class='fs-4'>평점 : {{ movie.vote_average }}</div>
-  {% if movie.overview %}
-    <div class='fs-5'>줄거리 : {{ movie.overview }}</div>
-  {% endif %}
-  {% comment %} <div class='fs-5'> 장르 : 
-    {% for genre in movie.genres.all %}
-      {{ genre.name }}
-    {% endfor %} {% endcomment %}
+  <div class='container'>
+    <div class='row'>
+      <div class='box col-4'>
+        <img src=" https://image.tmdb.org/t/p/original/{{movie.poster_path}}" alt="" class='w-100'>
+      </div>
+
+      <div class='box col-8'>
+        <h1 class='fw-bold'>{{ movie.title }}</h1>
+        <div class='fs-4'>개봉일 : {{ movie.release_date }}</div>
+        <div class='fs-4'>평점 : {{ movie.vote_average }}</div>
+        {% if movie.overview %}
+          <div class='fs-5'>줄거리 : {{ movie.overview }}</div>
+        {% endif %}
+        <div class='fs-5'> 장르 : 
+          {% for genre in movie.genres %}
+            {{ genre.name }}
+          {% endfor %}
+        </div>
   </div> 
   
   
