--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -1,185 +1,103 @@
 {% extends 'base.html' %}
+
 {% block content %}
 
-{% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% endcomment %}
-
-
-{% comment %} {{person}}
-{{person.username}} {% endcomment %}
-{% comment %} {{user.username}}
-{{username}}
-{{username.username}} {% endcomment %}
-{% comment %} {{person}} {% endcomment %}
 <br>
-  {% comment %} <h1 class='fw-bold'>Movies List</h1> {% endcomment %}
-  <br>
-  
-  
-       {% comment %} <p id="like-count-{{person.pk}}">{{person.like_movies.all|length}}</p> {% endcomment %}
-       {% comment %} <p id="save-list">{{person.like_movies.all|length}}</p> {% endcomment %}
-  
 
-
-
-  <div class="row">
+<div class="row">
 {% for movie_list in movies %}
+  <div class="col-2">
+    <div class="card border-light mb-3" style="max-width: 18rem;">
+      <div class="card-body">
+        {% if movie_list.poster_path|length%}
+          <div
+            class="bg-image hover-overlay ripple"
+            data-mdb-ripple-color="light"
+            id="mouse-enter"
+          >
+            <img
+              src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
+              class="img-fluid"
+              
+            />
+            <a href="#!">
+              <div
+                class="mask"
+                style="background-color: rgba(251, 251, 251, 0.15)"
+              ></div>
+            </a>
+          </div>
+        {% else %}
+        포스터가 없는 영화입니다
+        {% endif %}
 
+        <button type="button" id="mouseOver{{movie_list.id}}" class="d-none btn btn-outline-light mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal{{movie_list.id}}">
+          Launch demo modal
+        </button>
 
-
-
-    
-    <div class="col-2">
-      <div class="card border-light mb-3" style="max-width: 18rem;">
-  {% comment %} <div class="card-header modalList">
-  {{ movie_list.title }}
-  <a href="{% url 'movies:detail' movie_list.id %}" >detail</a>
-
-  </div> {% endcomment %}
-  <div class="card-body">
-  {% if movie_list.poster_path|length%}
-    {% comment %} <img src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"  alt="" width="250"> {% endcomment %}
-
-<div
-                    class="bg-image hover-overlay ripple"
-                    data-mdb-ripple-color="light"
-                    id="mouse-enter"
-                  >
-                    <img
-                      src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
-                      class="img-fluid"
-                      
-                    />
-                    <a href="#!">
-                      <div
-                        class="mask"
-                        style="background-color: rgba(251, 251, 251, 0.15)"
-                      ></div>
-                    </a>
-                  </div>
-
-{% comment %}  {% endcomment %}
-    {% else %}
-
-    포스터가 없는 영화입니다
-    {% endif %}
-
-    {% comment %} <h5 class="card-title">개봉일 - {{ movie_list.release_date}}</h5> {% endcomment %}
-    <!-- Button trigger modal -->
-    {% comment %} d-none으로 감춰서 마우스오버로만들자 {% endcomment %}
-<button type="button" id="mouseOver{{movie_list.id}}" class="d-none btn btn-outline-light mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal{{movie_list.id}}">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal{{movie_list.id}}" tabindex="-1" aria-labelledby="exampleModalLabel{{movie_list.id}}" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel{{movie_list.id}}">{{movie_list.title}} {{movie_list.release_date}}개봉</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal{{movie_list.id}}" tabindex="-1" aria-labelledby="exampleModalLabel{{movie_list.id}}" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel{{movie_list.id}}">{{movie_list.title}} {{movie_list.release_date}}개봉</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+              <img
+                src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
+                class="img-fluid"
+              />
+                {{movie_list.overview}}
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-light mb-4" data-bs-dismiss="modal">닫기</button>
+                <a href="{% url 'movies:detail' movie_list.id %}">
+                  <button type="button" class="btn btn-outline-light mb-4">상세페이지</button>
+                </a>
+                <form class="like-form" data-movie-id="{{ movie_list.pk }}">
+                  {% csrf_token %}
+                  {% if user in movie_list.like_users.all %}
+                    <button id="like-button-{{ movie_list.pk }}" class='btn btn-outline-light mb-4'>찜 목록에서 삭제</button>
+                  {% else %}
+                    <button id="like-button-{{ movie_list.pk }}" class='btn btn-outline-light mb-4'>찜 목록에 추가</button>
+                  {% endif %}
+                </form> 
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-      <img
-                      src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
-                      class="img-fluid"
-                    />
-                    
-        {{movie_list.overview}}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-light mb-4" data-bs-dismiss="modal">닫기</button>
-        <a href="{% url 'movies:detail' movie_list.id %}"><button type="button" class="btn btn-outline-light mb-4">상세페이지</button></a>
-        {% comment %} <a href="{% url 'movies:detail' movie_list.id %}" >detail</a> {% endcomment %}
-
-        <form class="like-form" data-movie-id="{{ movie_list.pk }}">
-          {% csrf_token %}
-          {% if user in movie_list.like_users.all %}
-              <button id="like-button-{{ movie_list.pk }}" class='btn btn-outline-light mb-4'>찜 목록에서 삭제</button>
-            {% else %}
-              <button id="like-button-{{ movie_list.pk }}" class='btn btn-outline-light mb-4'>찜 목록에 추가</button>
-            {% endif %}
-        </form> 
-
-
-
-        
-      </div>
-    </div>
+    </div> 
   </div>
-</div>
-{% comment %}  {% endcomment %}
-     
-    {% comment %} <p class="card-text">
-    {% if movie_list.overview|length%}
-    {{ movie_list.overview|slice:":50"}}....
-    {% else %}
-    줄거리가 제공되지 않는 영화입니다
-    {% endif %}
-    </p> {% endcomment %}
-
-    {% comment %} 슬라이씽 {% endcomment %}
-  </div>
-</div>
-    </div>
-   
-  
-
-
-{% comment %} {{movie_list.title}} {% endcomment %}
-{% comment %} {{movie_list.overview}} {% endcomment %}
 
 {% endfor%}
 </div>
 
- {% comment %} <div class="movie-list">
 
-
-
-    {% for movie in movies %}
-      <div class="movie">
-        <h3 class='fw-bold'>{{ movie.title }}</h3>
-        <p>{{ movie.overview }}</p>
-      
-
-        <form class="like-form" data-movie-id="{{ movie.pk }}">
-          {% csrf_token %}
-          {% if user in movie.like_users.all %}
-              <button id="like-button-{{ movie.pk }}" class='btn btn-secondary'>찜 목록에서 삭제</button>
-            {% else %}
-              <button id="like-button-{{ movie.pk }}" class='btn btn-primary'>찜 목록에 추가</button>
-            {% endif %}
-        </form>
-        
-
-        <a href="{% url 'movies:detail' movie.pk %}" type='btn' class='btn btn-secondary'>detail</a>
-        <hr>
-      </div>
-    {% endfor %}
-  </div>  {% endcomment %}
-
- <button type="button" class="btn btn-primary d-none " id="liveToastBtn">찜한 영화목록</button>
+<button type="button" class="btn btn-primary d-none " id="liveToastBtn">찜한 영화목록</button>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
   <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
-      {% comment %} <img src="..." class="rounded me-2" alt="..."> {% endcomment %}
       <strong class="me-auto">찜한 영화목록</strong>
       <small>{{ person.like_movies.all|length}}가지</small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
       <ul>
-{% if person.like_movies.all|length%}
-{% for movie in person.like_movies.all %}
-  <li>{{movie}}</li>
-{% endfor %}
-{% else %}
-<li>찜목록이 없어용</li>
-{% endif %}
-</ul>
+        {% if person.like_movies.all|length%}
+          {% for movie in person.like_movies.all %}
+            <li>{{movie}}</li>
+          {% endfor %}
+        {% else %}
+          <li>찜목록이 없어용</li>
+        {% endif %}
+      </ul>
     </div>
   </div>
-</div> 
+</div>
+
 
 <script>
 var toastTrigger = document.getElementById('liveToastBtn')
@@ -203,15 +121,8 @@ const modalButtons = document.querySelectorAll('.d-none')
 const modalEnters = document.querySelectorAll('#mouse-enter')
 //호버되는 이미지말고 바깥 div바꿔주고 하는거 중요 체크 ㅇㅇ
 
-{% comment %} modalEnters.forEach(function(currentValue,index,array){
- 
-  console.log(currentValue)
-  console.log(index)
-  console.log(array)
-}) {% endcomment %}
 
 modalEnters.forEach(function(element,index){
-    
     element.addEventListener('click',function(){
     console.log(index)
     modalButtons[index].click()// 오...미친 이 사용법이 되네연?
@@ -222,134 +133,10 @@ window.onload=function(){
       liveToastBtn.click()
 
 }
-
-{% comment %} saves.forEach(save=>{
-  save.addEventListener('click',function(event){
-    liveToastBtn.click()
-    //console.log(event.target.innerText)
-  })}) {% endcomment %}
-
-
-{% comment %} modalEnters.forEach(modalEnter=>{
-    modalEnter.addEventListener('mouseenter',function(event,index,array){
-      console.log('hi')
-      //modalButtons[cnt].click()
-      //console.log(event)
-      //console.log(index)
-      //console.log(array)
-      //console.log(modalEnter.indexOf().call)
-      //인덱스구하기
-      //console.log(event.target.dataset)
-    })
-  }) {% endcomment %}
-console.log('hihi')
-
-  {% comment %} modalButtons.forEach(modalButton=>{
-    modalEnters.forEach(modalEnter=>{
-      modalEnter.addEventListener('mouseenter',function(event){
-        modalButton.click()
-        //console.log('by')
-    })
-    })
-    
-  })  {% endcomment %}
-
-  {% comment %} const modalLists = document.querySelectorAll('.modalList')
-
-  modalLists.forEach(ml=>{
-    ml.addEventListener('click',function(event){
-      
-      alert('hoihi')
-      console.log('hihih')
-    })
-  }) 
-
-  const movies = document.querySelectorAll('.card-header')
-  movies.forEach(movie=>{
-    movie.addEventListener('click',function(event){
-      
-      alert('hoihi')
-      console.log('hihih')
-    })
-  })  {% endcomment %}
-
-
   // console.log(csrftoken)
   // for..of / forEach 여러 forms를 반복을 돌면서 axios를 요청할 수 있도록 함
    forms.forEach(form => {
     form.addEventListener('submit', function (event) {
-      event.preventDefault()
-      // 찜목록 추가버튼 눌르면 이거발생
-      // console.log(event.target.dataset.movieId)
-      const movieId = event.target.dataset.movieId
-
-      axios({
-        method: 'post',
-        url: `http://127.0.0.1:8000/movies/${movieId}/like/`,
-        headers: {'X-CSRFToken': csrftoken},
-      })
-        .then(response => {
-          console.log(response.data)
-          const liked = response.data.liked
-          const likeButton = document.querySelector(`#like-button-${movieId}`)
-          const likeCount = document.querySelector(`#like-count-${movieId}`)
-          const count = response.data.count
-          console.log(count)
-          likeButton.classList.toggle('btn-secondary')
-          likeButton.classList.toggle('btn-secondary')
-
-          if (liked === true) {
-            likeButton.innerText = '찜 목록에서 삭제'
-          } else {
-            likeButton.innerText = '찜 목록에 추가'
-          }
-
-         // likeCount.innerText = count
-        })
-    })
-  }) 
-
-
-  
-
-  
-</script>
-
-  
-{% endblock %}
-
-
-{% block script %}
-<script>
-  // 좋아요 기능
-  const forms = document.querySelectorAll('.like-form')
-  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
-  
-  //const modalLists = document.querySelectorAll('.modalList')
-
-  {% comment %} modalLists.forEach(ml=>{
-    ml.addEventListener('click',function(event){
-      
-      alert('hoihi')
-      console.log('hihih')
-    })
-  })  {% endcomment %}
-
-  //const movies = document.querySelectorAll('.card-header')
-  {% comment %} movies.forEach(movie=>{
-    movie.addEventListener('click',function(event){
-      
-      alert('hoihi')
-      console.log('hihih')
-    })
-  })  {% endcomment %}
-
-
-  // console.log(csrftoken)
-  // for..of / forEach 여러 forms를 반복을 돌면서 axios를 요청할 수 있도록 함
-   forms.forEach(form => {
-    form.addEventListener('submit', function (event) {
-      
       event.preventDefault()
       // console.log(event.target.dataset.movieId)
       const movieId = event.target.dataset.movieId
@@ -363,54 +150,17 @@ console.log('hihi')
           console.log(response.data)
           const liked = response.data.liked
           const likeButton = document.querySelector(`#like-button-${movieId}`)
-          // const likeCount = document.querySelector(`#like-count-${movieId}`)
           const count = response.data.count
-          //likeButton.classList.toggle('btn-secondary')
-          //likeButton.classList.toggle('btn-secondary')
+          likeButton.classList.toggle('btn-secondary')
+          likeButton.classList.toggle('btn-secondary')
 
           if (liked === true) {
             likeButton.innerText = '찜 목록에서 삭제'
           } else {
             likeButton.innerText = '찜 목록에 추가'
           }
-
-          // likeCount.innerText = count
         })
     })
   }) 
-
-  {% comment %} // 무한스크롤 기능
-  let pageNum = 2
-  document.addEventListener('scroll', (event) => {
-    console.log(event)
-    const {scrollHeight, scrollTop, clientHeight} = document.documentElement
-    // console.log(scrollHeight, scrollTop, clientHeight)
-    if (scrollHeight - Math.round(scrollTop) === clientHeight) {
-      axios({
-        method: 'get',
-        url: `/movies/?page=${pageNum}`,
-        headers: {'x-requested-with': 'XMLHttpRequest'}
-      })
-        .then((res) => {
-          const movies = res.data
-
-          movies.forEach((movie) => {
-            const movieList = document.querySelector('.movie-list')
-            const movieDiv = document.createElement('div')
-
-            const movieHTML = `
-              <h3 class='fw-bold'>${ movie.fields.title }</h3>
-              <p>${ movie.fields.overview }</p>
-              <a href="movies/${ movie.pk }/" type='btn' class='btn btn-secondary'>detail</a>
-              <hr>
-            `
-            movieDiv.innerHTML = movieHTML
-            movieList.appendChild(movieDiv)
-          })
-          pageNum += 1
-        })
-    }
-  }) {% endcomment %}
-
 </script>
 {% endblock %}
