--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
     />
+    <link rel='stylesheet' type='text/css' href='{% static 'css/fontawesome.min.css' %}' >
     <!-- Google Fonts Roboto -->
     <link
       rel="stylesheet"
@@ -27,11 +28,9 @@
     <!-- Regular MDB theme -->
     {% comment %} <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" /> {% endcomment %}
     {% comment %} <link rel="stylesheet" href="css/mdb.min.css" /> {% endcomment %}
-    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% endcomment %}
 
   </head>
-  <body >
-  <!-- 여기 인라인으로 강제로 주자 ㅇㅇ 오프캔버스위해서....-->
+  <body>
     <!-- Start your project here-->
 <div class="container ">
 
@@ -39,12 +38,11 @@
     
     <div class="container-fluid">
     {% if user.is_authenticated %}
-<a class="navbar-brand" href="{% url 'movies:index'%}">영화목록 /</a>
-<a class="navbar-brand" href="{% url 'community:index'%}">커뮤니티 /</a>
-{% comment %} <a class="navbar-brand" href="{% url 'community:create'%}">글쓰기 /</a> {% endcomment %}
-<a class="navbar-brand" href="{% url 'movies:recommended'%}">랜덤추천 /</a>
-<a class="navbar-brand" href="{% url 'movies:recoreco'%}">장르추천</a>
-<ul class="navbar-nav ms-auto">
+      <a class="navbar-brand" href="{% url 'movies:index'%}"><i class="fas fa-tv"></i>영화목록 /</a>
+      <a class="navbar-brand" href="{% url 'community:index'%}"><i class="fas fa-users"></i>커뮤니티 /</a>
+      <a class="navbar-brand" href="{% url 'movies:recommended'%}"><i class="fas fa-dice"></i> 랜덤추천 /</a>
+      <a class="navbar-brand" href="{% url 'movies:recoreco'%}"><i class="fas fa-thumbs-up"></i>장르추천</a>
+      <ul class="navbar-nav ms-auto">
       <!-- Avatar -->
       <li class="nav-item dropdown">
         <a
@@ -55,29 +53,29 @@
           data-mdb-toggle="dropdown"
           aria-expanded="false"
         >
-          <img
+        <i class="fas fa-user-circle fa-lg"></i>
+          {% comment %} <img
             src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg"
             class="rounded-circle"
             height="22"
             alt=""
             loading="lazy"
-          />
+          /> {% endcomment %}
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <li>
-            <a class="dropdown-item">{{ user.username }} 로그인중</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="{% url 'accounts:profile' user %}">내 프로필</a>
-          </li>
-          
-          <li>
+          <a class="dropdown-item">{{ user.username }} 로그인중</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="{% url 'accounts:profile' user %}">내 프로필</a>
+        </li>
+        
+        <li>
           <form action="{% url 'accounts:logout' %}" method="POST" class='d-inline'>
-        {% csrf_token %}
-        <input type="submit" value="로그아웃" class="dropdown-item">
-      </form>
-            {% comment %} <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a> {% endcomment %}
-          </li>
+            {% csrf_token %}
+            <input type="submit" value="로그아웃" class="dropdown-item">
+          </form>
+        </li>
         </ul>
       </li>
     </ul>
