--- a/templates/base2.html
+++ b/templates/base2.html
@@ -1,146 +1,32 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design for Bootstrap</title>
-    <!-- MDB icon -->
-    <link rel="icon" href="{% static 'img/favicon.ico'%}" type="image/x-icon" />
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-    />
-    <!-- Google Fonts Roboto -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-    />
-    <!-- Dark MDB theme -->
-    
-    <link rel="stylesheet" href="    {% static 'css/mdb.dark.min.css'%}"/>
-    <!-- Regular MDB theme -->
-    {% comment %} <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" /> {% endcomment %}
-    {% comment %} <link rel="stylesheet" href="css/mdb.min.css" /> {% endcomment %}
-    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% endcomment %}
-
-  </head>
-  <body style="background-color:#303030;">
-  <!-- 여기 인라인으로 강제로 주자 ㅇㅇ 오프캔버스위해서....-->
-    <!-- Start your project here-->
-<div class="container ">
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    
-    <div class="container-fluid">
-    {% if user.is_authenticated %}
-<a class="navbar-brand" href="{% url 'movies:index'%}">영화목록 /</a>
-<a class="navbar-brand" href="{% url 'community:index'%}">커뮤니티 /</a>
-{% comment %} <a class="navbar-brand" href="{% url 'community:create'%}">글쓰기 /</a> {% endcomment %}
-<a class="navbar-brand" href="{% url 'movies:recommended'%}">랜덤추천 /</a>
-<a class="navbar-brand" href="{% url 'movies:recoreco'%}">장르추천</a>
-<ul class="navbar-nav ms-auto">
-      <!-- Avatar -->
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle d-flex align-items-center"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-mdb-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <img
-            src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg"
-            class="rounded-circle"
-            height="22"
-            alt=""
-            loading="lazy"
-          />
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <li>
-            <a class="dropdown-item">{{ user.username }} 로그인중</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="{% url 'accounts:profile' user %}">내 프로필</a>
-          </li>
-          
-          <li>
-          <form action="{% url 'accounts:logout' %}" method="POST" class='d-inline'>
-        {% csrf_token %}
-        <input type="submit" value="로그아웃" class="dropdown-item">
-      </form>
-            {% comment %} <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a> {% endcomment %}
-          </li>
-        </ul>
-      </li>
-    </ul>
-    {% else %}
-      <a class="navbar-brand" href="{% url 'accounts:signup' %}">가입 /</a>
-      <a class="navbar-brand" href="{% url 'accounts:login' %}">로그인 </a>
-      <ul class="navbar-nav ms-auto">
-      <!-- Avatar -->
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle d-flex align-items-center"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-mdb-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <img
-            src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg"
-            class="rounded-circle"
-            height="22"
-            alt=""
-            loading="lazy"
-          />
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <li>
-            <a class="dropdown-item" href="{% url 'accounts:login' %}"> 로그인</a>
-          </li>
-          
-          
-      
-        </ul>
-      </li>
-    </ul>
-{% comment %}  {% endcomment %}
-    
-    
-
-  </div>
-
-     
-    
-      {% endif %}
-      
-    </nav>
-  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <title>Document</title>
+  {% comment %} <style>
+  *{
+    background-color: brown;
+  }
+  </style> {% endcomment %}
 
 
 
-  
-   {% comment %} <nav>
+
+
+</head>
+<body>
+  <div class="container">
+    <nav>
       {% if user.is_authenticated %}
       <div class="fs-2 alert alert-dark" role="alert">Hello, {{ user.username }}</div>
       <a href="{% url 'accounts:profile' user %}" type='btn' class='btn btn-light d-inline' >내 프로필<a>
       <form action="{% url 'accounts:logout' %}" method="POST" class='d-inline'>
         {% csrf_token %}
-        <input type="submit" value="로그아웃" class='btn btn-light'>
+        <input type="submit" value="로그아웃" class='btn btn-warning'>
       </form>
       <p></p>
-      
-
-
       <a href="{% url 'movies:index'%}" type='btn' class='btn btn-dark'>영화목록</a>
       <a href="{% url 'community:index'%}" type='btn' class='btn btn-dark'>커뮤니티</a>
       <a href="{% url 'community:create'%}" type='btn' class='btn btn-dark'>글쓰기</a>
@@ -153,95 +39,18 @@
       <a href="{% url 'accounts:login' %}" type='btn' class='btn btn-dark'>로그인</a>
       {% endif %}
     </nav>
-    <br> {% endcomment %}
-
-  
-  
-
-
-    
+    <br>
     {% block content %}
     {% endblock %}
   </div>
 
-  <!-- Footer -->
-<footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
 
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
 
-    
 
-      <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
 
-    
-
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-        찜한 목록을 기반으로 영화를 추천해주는 사이트... 혹은 장르기반
-      </p>
-    </section>
-    <!-- Section: Text -->
-
-    
-  </div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Copyright:
-    <a class="text-white" href="http://127.0.0.1:8000/">KIMJISOPEE.COM</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
-
-    <!-- End your project here-->
-
-    <!-- MDB -->
-    <script type="text/javascript" src="{% static 'js/mdb.min.js'%}"></script>
-    <!-- Custom scripts -->
-    <script type="text/javascript"></script>
-    {% comment %} bootstrap {% endcomment %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-<script>
-  const mouseOver = document.querySelector('#navbarDropdownMenuLink')
-  const button = document.querySelector('#navbarDropdownMenuLink')
-  const mouseLeaves = document.querySelectorAll('.dropdown-menu')
-  mouseOver.addEventListener('mouseenter',function(event){
-    button.click()
-    })
-  //mouseOver.addEventListener('mouseleave',function(event){
-  //  button.click()
-  //})
-  
-  mouseLeaves.forEach(mouseLeave=>{
-    mouseLeave.addEventListener('mouseleave',function(event){
-    button.click()
-  })
-  })
-
-  
-
-    //mouse over가아니라 mouseenter로 바꾼거 기록하기 ㅇㅇ
-  </script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  {% block script %}
+  {% endblock %}
+</body>
 </html>
