파비콘,로그인,로그아웃,모델등...

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Material Design for Bootstrap</title>
     <!-- MDB icon -->
-    <link rel="icon" href="{% static 'img/favicon.ico'%}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'img/favicon.ico'%}" type="image/x-icon" sizes="16X16" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
