--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-
+<div class="d-flex justify-content-center">
 <form action="" method="POST" >
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" class="btn btn-outline-light mb-4">
-</form>
+</form></div>
+
 
 {% endblock  %}
