--- a/community/templates/community/index.html
+++ b/community/templates/community/index.html
@@ -27,9 +27,9 @@
 <tr>
 <td>{{ review.pk }}</td>
 
-<td><a href="{% url 'community:detail' review.pk %}">{{ review.title }}</a></td>
+<td><a href="{% url 'community:detail' review.pk %}" class='text-light'>{{ review.title }}</a></td>
 <td>{{ review.created_at }}</td>
-<td><a href="{% url 'accounts:profile' review.user.username %}">{{ review.user }}</a></td>
+<td><a href="{% url 'accounts:profile' review.user.username %}" class='text-light'>{{ review.user }}</a></td>
 
 </tr>
 {% endfor %}
