--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,12 +2,15 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-center">
-<form action="" method="POST" >
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn btn-outline-light mb-4">
-</form></div>
+<div class="card bg-dark m-5 mx-auto"  style="width: 18rem;">
+  <div class='card-body'>
+    <form action="" method="POST" class='my-3'>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="submit" class="btn btn-outline-light ms-auto">
+    </form>
+  </div>
+</div>
 
 
 {% endblock  %}
