--- a/templates/base.html
+++ b/templates/base.html
@@ -86,13 +86,7 @@
           data-mdb-toggle="dropdown"
           aria-expanded="false"
         >
-          <img
-            src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg"
-            class="rounded-circle"
-            height="22"
-            alt=""
-            loading="lazy"
-          />
+          <i class="fas fa-user-circle fa-lg"></i>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <li>
