--- a/templates/base.html
+++ b/templates/base.html
@@ -73,8 +73,8 @@
       </li>
     </ul>
     {% else %}
-      <a class="navbar-brand" href="{% url 'accounts:signup' %}">가입 /</a>
-      <a class="navbar-brand" href="{% url 'accounts:login' %}">로그인 </a>
+      <a class="navbar-brand" href="{% url 'accounts:signup' %}"><i class="far fa-address-book"></i> 가입 /</a>
+      <a class="navbar-brand" href="{% url 'accounts:login' %}"><i class="fas fa-sign-in-alt"></i> 로그인 </a>
       <ul class="navbar-nav ms-auto">
       <!-- Avatar -->
       <li class="nav-item dropdown">
