--- a/movies/templates/movies/blackbean.html
+++ b/movies/templates/movies/blackbean.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
 <br>
-<h2>검은콩이 {{ results |length}} 가지의 영화를 추천드려요</h2>
-
+<h1><i class="fas fa-thumbs-up"></i>검은콩추천</h1>
+<div class='fs-5' style='color:gray'>찜목록을 기반으로 검은콩이 {{ results |length}} 가지의 영화를 추천드려요</div>
+<br>
 
 {% if results|length%}
   <div class="row">
