--- a/movies/templates/movies/detail2.html
+++ b/movies/templates/movies/detail2.html
@@ -5,7 +5,7 @@
   <div class='container'>
     <div class='row'>
       <div class='box col-4'>
-        <img src=" https://image.tmdb.org/t/p/original/{{movie.poster_path}}" alt="" class='w-100'>
+        <img src=" https://image.tmdb.org/t/p/original/{{movie.poster_path}}" alt="" class='w-100 mb-4'>
       </div>
 
       <div class='box col-8'>
