카피라이트랑자잘한거수정이용

--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2021 Copyright:
-    <a class="text-white" href="http://127.0.0.1:8000/">KIMJISOHEE.COM</a>
+    <a class="text-white" href="#">Black Bean</a>
   </div>
   <!-- Copyright -->
 </footer>
