--- a/movies/templates/movies/recommended.html
+++ b/movies/templates/movies/recommended.html
@@ -22,7 +22,7 @@
           data-mdb-ripple-color="light"
         >
           <img
-            src="https://image.tmdb.org/t/p/original/{{movie.poster_path}}"
+            src="https://image.tmdb.org/t/p/w780/{{movie.poster_path}}"
             class="img-fluid"
           />
           <a href="{% url 'movies:detail' movie.pk %}">
