--- a/movies/templates/movies/result.html
+++ b/movies/templates/movies/result.html
@@ -27,7 +27,7 @@
                 id="mouse-enter"
               >
                 <img
-                  src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
+                  src="https://image.tmdb.org/t/p/w342/{{movie_list.poster_path}}"
                   class="img-fluid"
                 />
                 <a href="#!">
