--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -4,8 +4,10 @@
 
 <br>
 
+<h1><i class="fas fa-tv"></i>영화목록</h1>
+<div class='fs-5' style='color:gray'>검은콩의 영화리스트, 이미 찜한영화는 보이지 않아요!</div>
 <div class="row">
-{% for movie_list in movies %}
+{% for movie_list in c %}
   <div class="col-2">
     <div class="card border-light mb-3" style="max-width: 18rem;">
       <div class="card-body">
@@ -16,7 +18,7 @@
             id="mouse-enter"
           >
             <img
-              src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
+              src="https://image.tmdb.org/t/p/w185/{{movie_list.poster_path}}"
               class="img-fluid"
               
             />
@@ -45,7 +47,7 @@
               </div>
               <div class="modal-body">
               <img
-                src="https://image.tmdb.org/t/p/original/{{movie_list.poster_path}}"
+                src="https://image.tmdb.org/t/p/w780/{{movie_list.poster_path}}"
                 class="img-fluid"
               />
                 {{movie_list.overview}}
