--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,15 +7,15 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design for Bootstrap</title>
+    <title>BLACK BEAN</title>
     <!-- MDB icon -->
-    <link rel="icon" href="{% static 'img/favicon.ico'%}" type="image/x-icon" sizes="16X16" />
+    <link rel="icon" href="http://flykimjiwon.dothome.co.kr/static/images/favicon.ico" type="image/x-icon" sizes="16X16" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
     />
-    <link rel='stylesheet' type='text/css' href='{% static 'css/fontawesome.min.css' %}' >
+    <link rel='stylesheet' type='text/css' href='http://flykimjiwon.dothome.co.kr/static/css/fontawesome.min.css' >
     <!-- Google Fonts Roboto -->
     <link
       rel="stylesheet"
@@ -24,7 +23,7 @@
     />
     <!-- Dark MDB theme -->
     
-    <link rel="stylesheet" href="{% static 'css/mdb.dark.min.css'%}"/>
+    <link rel="stylesheet" href="http://flykimjiwon.dothome.co.kr/static/css/mdb.dark.min.css"/>
     <!-- Regular MDB theme -->
 
 
@@ -38,14 +37,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     
     <div class="container-fluid">
-    <a class="navbar-brand" href='#'><img src="{% static 'images/Beanlogo-2.png' %}" width='120'></a>
+    <a class="navbar-brand" href='{% url 'movies:index'%}'><img src="http://flykimjiwon.dothome.co.kr/static/images/Beanlogo-2.png" width='120'></a>
     {% if user.is_authenticated %}
       <a class="navbar-brand" href="{% url 'movies:index'%}"><i class="fas fa-tv"></i>영화목록 /</a>
       <a class="navbar-brand" href="{% url 'community:index'%}"><i class="fas fa-users"></i>커뮤니티 /</a>
       <a class="navbar-brand" href="{% url 'movies:recommended'%}"><i class="fas fa-dice"></i> 랜덤추천 /</a>
       <a class="navbar-brand" href="{% url 'movies:recoreco'%}"><i class="fas fa-thumbs-up"></i>장르추천 /</a>
       <a class="navbar-brand" href="{% url 'movies:blackbean' user %}">
-        <img src="{% static 'images/blackbean.png' %}" width='25'>검은콩추천
+        <img src="http://flykimjiwon.dothome.co.kr/static/images/blackbean.png" width='25'>검은콩추천
       </a>
       <ul class="navbar-nav ms-auto">
       <!-- Avatar -->
@@ -147,7 +146,7 @@
     <!-- End your project here-->
 
     <!-- MDB -->
-    <script type="text/javascript" src="{% static 'js/mdb.min.js'%}"></script>
+    <script type="text/javascript" src="http://flykimjiwon.dothome.co.kr/static/js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
