--- a/movies/templates/movies/recoreco.html
+++ b/movies/templates/movies/recoreco.html
@@ -54,7 +54,7 @@
           data-mdb-ripple-color="light"
         >
           <img
-            src="{% get_static_prefix %}images/{{val}}.jpg"
+            src="{% get_static_prefix %}images/resize2/{{val}}.jpg"
             class="img-fluid"
           />
           <a href="#!">
