간단한사용성..위로..

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,21 @@
     
     <link rel="stylesheet" href="http://flykimjiwon.dothome.co.kr/static/css/mdb.dark.min.css"/>
     <!-- Regular MDB theme -->
-
+<style>
+#fixedbutton {
+    position: fixed;
+    bottom: 0px;
+    left: 200px; 
+}
+</style>
 
   </head>
   <body>
     <!-- Start your project here-->
   <!-- logo -->
-  
+  <a href="#"><button type="button" id="fixedbutton" class="btn btn-outline-light mb-4">
+              위로
+            </button></a>
 
   <div class="container ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
